[gd_scene load_steps=17 format=2]

[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/options_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/menu_button0.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Krub-ExtraLight.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/pronoun_input_box.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/slider_tick.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/slider_grabber.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/slider.png" type="Texture" id=8]
[ext_resource path="res://themes/dialog_theme.tres" type="Theme" id=9]
[ext_resource path="res://assets/ui/font_preview.png" type="Texture" id=10]
[ext_resource path="res://themes/dropdown_menu_theme.tres" type="Theme" id=11]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 479, 12 )
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[node name="options_menu" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -460, 150 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="white" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.418091
margin_top = 1.25436
margin_right = -0.418091
margin_bottom = 1.25439

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2( 369.758, -15.7146 )
points = PoolVector2Array( 0, 0, 0, 800 )
width = 1.0

[node name="Line2D2" type="Line2D" parent="."]
visible = false
position = Vector2( 398.949, -15.7146 )
points = PoolVector2Array( 0, 0, 0, 800 )
width = 1.0

[node name="back" type="Button" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 506.0
margin_top = 607.98
margin_right = -524.0
margin_bottom = -53.0197
rect_pivot_offset = Vector2( 311.063, -221.429 )
focus_mode = 0
mouse_default_cursor_shape = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="box2" type="Sprite" parent="back"]
position = Vector2( 0.366638, 1.67036 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -8.3689, -6.12292 )

[node name="Label" type="Label" parent="back"]
margin_left = 1.0
margin_top = 2.0
margin_right = 249.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "save and return"
align = 1
valign = 1

[node name="reset" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1117.8
margin_top = 658.029
margin_right = -12.1976
margin_bottom = -12.9712
rect_pivot_offset = Vector2( 311.063, -221.429 )
focus_mode = 0
mouse_default_cursor_shape = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="box2" type="Sprite" parent="reset"]
position = Vector2( 0.366638, 1.67036 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -8.3689, -6.12292 )

[node name="Label" type="Label" parent="reset"]
margin_left = 1.0
margin_top = 2.0
margin_right = 186.0
margin_bottom = 60.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "reset settings"
align = 1
valign = 1

[node name="text_size" type="Control" parent="."]
editor/display_folded = true
margin_left = 279.106
margin_top = 95.0708
margin_right = 319.106
margin_bottom = 135.071
__meta__ = {
"_edit_group_": true
}

[node name="slider_label" type="Label" parent="text_size"]
margin_left = -127.191
margin_top = -5.21382
margin_right = -30.1908
margin_bottom = 28.7862
text = "text size"
align = 2

[node name="slider" type="HSlider" parent="text_size"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.0
margin_right = 439.0
margin_bottom = -6.0
focus_mode = 0
mouse_default_cursor_shape = 0
custom_icons/tick = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = 20.0
max_value = 40.0
step = 4.0
value = 24.0
scrollable = false
tick_count = 6
ticks_on_borders = true
focus_mode = 0

[node name="preview_a" type="Label" parent="text_size"]
margin_left = 26.3268
margin_top = 65.2425
margin_right = 452.327
margin_bottom = 119.243
theme = ExtResource( 9 )
text = "oliver"
valign = 1

[node name="preview_b" type="RichTextLabel" parent="text_size"]
margin_left = 27.3268
margin_top = 129.243
margin_right = 452.327
margin_bottom = 219.243
theme = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "wahoo i sure [i]love[/i] purrgatory!"
text = "wahoo i sure love purrgatory!"

[node name="preview_box" type="Sprite" parent="text_size"]
position = Vector2( 236.327, 149 )
texture = ExtResource( 10 )

[node name="preview_label" type="Label" parent="text_size"]
margin_left = -127.497
margin_top = 56.9917
margin_right = -30.497
margin_bottom = 90.9917
theme = ExtResource( 1 )
text = "preview"
align = 2

[node name="audio" type="Control" parent="."]
editor/display_folded = true
margin_left = 279.106
margin_top = 421.585
margin_right = 319.106
margin_bottom = 461.585
__meta__ = {
"_edit_group_": true
}

[node name="music_label" type="Label" parent="audio"]
margin_left = -191.6
margin_top = -7.0
margin_right = -30.6001
margin_bottom = 27.0
text = "music volume"
align = 2

[node name="music" type="HSlider" parent="audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.0
margin_right = 439.0
margin_bottom = -6.0
focus_mode = 0
mouse_default_cursor_shape = 0
custom_icons/tick = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 0.6
scrollable = false
ticks_on_borders = true
focus_mode = 0

[node name="sfx_label" type="Label" parent="audio"]
margin_left = -153.742
margin_top = 53.9303
margin_right = -30.7422
margin_bottom = 87.9303
text = "sfx volume"
align = 2

[node name="sfx" type="HSlider" parent="audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 52.8001
margin_right = 439.0
margin_bottom = 54.8001
focus_mode = 0
mouse_default_cursor_shape = 0
custom_icons/tick = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 0.6
scrollable = false
ticks_on_borders = true
focus_mode = 0

[node name="window_size" type="Control" parent="."]
margin_left = -9.04639
margin_top = 1.29234
margin_right = 30.9536
margin_bottom = 41.2923

[node name="Label" type="Label" parent="window_size"]
margin_left = 843.432
margin_top = 91.1451
margin_right = 984.432
margin_bottom = 125.145
text = "window size"

[node name="option_button" type="OptionButton" parent="window_size"]
margin_left = 1014.0
margin_top = 88.0
margin_right = 1200.0
margin_bottom = 130.0
focus_mode = 0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "420 x 69"

[node name="fullscreen" type="Control" parent="."]
editor/display_folded = true
margin_left = 1134.01
margin_top = 175.433
margin_right = 1174.01
margin_bottom = 215.434

[node name="fs_label" type="Label" parent="fullscreen"]
margin_left = -191.6
margin_top = -7.0
margin_right = -30.6001
margin_bottom = 27.0
text = "fullscreen"
align = 2

[node name="fullscreen" type="CheckBox" parent="fullscreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.5424
margin_top = -27.7207
margin_right = 5.45755
margin_bottom = 0.279274
focus_mode = 0
mouse_default_cursor_shape = 0
enabled_focus_mode = 0

[node name="enable_notes" type="Control" parent="."]
editor/display_folded = true
margin_left = 1134.01
margin_top = 309.713
margin_right = 1174.01
margin_bottom = 349.713

[node name="label" type="Label" parent="enable_notes"]
margin_left = -251.0
margin_top = -7.0
margin_right = -31.0
margin_bottom = 27.0
text = "objective tracker"
align = 2

[node name="label2" type="Label" parent="enable_notes"]
margin_left = -297.0
margin_top = 38.0
margin_right = 32.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "automatically keeps track of your objectives in the \"notes\" menu."
align = 2
autowrap = true

[node name="enable_notes" type="CheckBox" parent="enable_notes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.5424
margin_top = -27.7207
margin_right = 5.45755
margin_bottom = 0.279274
focus_mode = 0
mouse_default_cursor_shape = 0
pressed = true
enabled_focus_mode = 0

[node name="voicing" type="Control" parent="."]
editor/display_folded = true
margin_left = 1134.01
margin_top = 243.713
margin_right = 1174.01
margin_bottom = 283.713

[node name="label" type="Label" parent="voicing"]
margin_left = -386.0
margin_top = -7.0
margin_right = -30.0
margin_bottom = 27.0
text = "assistive self-voicing"
align = 2

[node name="enable_voicing" type="CheckBox" parent="voicing"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.5424
margin_top = -27.7207
margin_right = 5.45755
margin_bottom = 0.279274
focus_mode = 0
mouse_default_cursor_shape = 0
enabled_focus_mode = 0
[connection signal="pressed" from="back" to="." method="hide"]
[connection signal="pressed" from="back" to="." method="save_options"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="value_changed" from="text_size/slider" to="." method="_on_text_size_value_changed"]
[connection signal="value_changed" from="audio/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="audio/sfx" to="." method="_on_sfx_value_changed"]
[connection signal="item_selected" from="window_size/option_button" to="." method="_on_window_size_selected"]
[connection signal="toggled" from="fullscreen/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="enable_notes/enable_notes" to="." method="_on_enable_notes_toggled"]
[connection signal="toggled" from="voicing/enable_voicing" to="." method="_on_enable_voicing_toggled"]
